<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
 
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="20dp"
	    android:orientation="horizontal" >	    
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:paddingLeft="5dp"
			android:text="@string/note"
			android:textColor="#ff0000"/>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	
	    
	    <CheckBox
	        android:id="@+id/enable_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"/>

		<EditText
		    android:id="@+id/path"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:enabled="false"
		    android:ems="10" >
		    <requestFocus />
		</EditText>

	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	
	    
	    <CheckBox
	        android:id="@+id/audio_scanner_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/scan_audio" />

	</LinearLayout>	

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	
	    
	    <CheckBox
	        android:id="@+id/video_scanner_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:text="@string/scan_video" />

	</LinearLayout>		
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	
	    
	    <CheckBox
	        android:id="@+id/delete_log_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center|left"
			android:text="@string/delete_all_log" />

	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >	
	    
	    <CheckBox
	        android:id="@+id/create_log_checkbox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center|left"
			android:text="@string/create_log" />

	</LinearLayout>				
</LinearLayout>