<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#87CEFA" >

    <LinearLayout
        android:id="@+id/layout_case_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.94"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/select_message"
            android:textColor="#FFFFFF"  />
        
        <ListView
            android:id="@+id/case_ListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#87CEFA"
            android:orientation="vertical" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp" >

        <Button
            android:id="@+id/audio_start_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/start" />

        <Button
            android:id="@+id/audio_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_bg"
            android:text="@string/stop" />

    </LinearLayout>

</LinearLayout>